--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "start": "node app.js",
     "build-client": "cd client && npm run build",
     "install-client": "cd client && npm install",
-    "heroku-postbuild": "npm run install-client && npm run build-client"
+    "run-client": "cd client && npm run start",
+    "heroku-postbuild": "npm run install-client && npm run build-client",
+    "server": "nodemon app.js",
+    "dev": "concurrently \"npm run server\" \"npm run run-client\""
   },
   "author": "Dmitriy Esko <dmitriy.esko@gmail.com>",
   "license": "ISC",
